syntax = "proto3";
package dydxprotocol.delaymsg;

import "cosmos_proto/cosmos.proto";
import "cosmos/msg/v1/msg.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/dydxprotocol/v4-chain/protocol/x/delaymsg/types";

// Msg defines the Msg service.
service Msg {
  // DelayMessage delays the execution of a message for a given number of
  // blocks.
  rpc DelayMessage(MsgDelayMessage) returns (MsgDelayMessageResponse);
}

// MsgDelayMessage is a request type for the DelayMessage method.
message MsgDelayMessage {
  // Authority is the address of the module that delays the message.
  option (cosmos.msg.v1.signer) = "authority";
  string authority = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // The message to be delayed.
  google.protobuf.Any msg = 2;

  // The number of blocks to delay the message for.
  uint32 delay_blocks = 3;
}

// MsgDelayMessageResponse is a response type for the DelayMessage method.
message MsgDelayMessageResponse {
  // The id of the created delayed message.
  uint64 id = 1;
}
